--- a/tray/CMakeLists.txt
+++ b/tray/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE src/main.cpp)
+target_include_directories(${PROJECT_NAME} PRIVATE src)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL Clang OR CMAKE_CXX_COMPILER_ID STREQUAL GNU)
   target_compile_options(${PROJECT_NAME} PRIVATE
