[WIP] Add nvec3, Ray

--- a/tray/CMakeLists.txt
+++ b/tray/CMakeLists.txt
@@ -5,6 +5,8 @@ target_sources(${PROJECT_NAME} PRIVATE
   src/tray/image.hpp
   src/tray/io.cpp
   src/tray/io.hpp
+  src/tray/nvec3.hpp
+  src/tray/ray.hpp
   src/tray/rgb.hpp
   src/tray/vec.hpp
 
